quote icon is no longer hidden on iPhone

--- a/theme/layout_topic.css
+++ b/theme/layout_topic.css
@@ -396,7 +396,7 @@ blockquote cite {
 	display: block;
 	font-size: 12px;
 	color: #444;
-	padding: 3px 10px 3px 15px;
+	padding: 3px 10px 3px 25px;
 	width: 100% auto;
 }
 
